tests/fixtures/invalid/fix_type_mismatch.torel
unit fixtures.fix_type_mismatch;

export proc main() -> Int32 {
    fix answer: Int32 = Exit.ok;
    return answer;
}
